# sovereign-sdk

./: Cargo.toml
examples/demo-rollup/provers/risc0/guest-celestia/: Cargo.toml
examples/demo-rollup/provers/risc0/guest-mock/: Cargo.toml
rollup-interface/: Cargo.toml
rollup-interface/src/node/rpc/: mod.rs
rollup-interface/src/node/services/: da.rs
rollup-interface/src/state_machine/stf/: fuzzing.rs
