[package]
name = "sov-rollup-interface"
description = "Defines interfaces for building rollups with the Sovereign SDK"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
exclude = [
    "specs/assets/*",
]


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
bytes = { workspace = true, optional = true, default-features = true }
digest = { version = "0.10.6", default-features = false, features = ["alloc"] }
hex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
futures = { version = "0.3.30" }
# TODO: Remove tokio when https://github.com/Sovereign-Labs/sovereign-sdk/issues/1161 is resolved
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "time"] }

# Proptest should be a dev-dependency, but those can't be optional
proptest = { version = "1.3.1", default-features = false, features = ["alloc"], optional = true }
proptest-derive = { version = "0.3.0", optional = true }


[dev-dependencies]
serde_json = { workspace = true }
proptest = { version = "1.3.1", default-features = false, features = ["alloc"] }
proptest-derive = { version = "0.3.0" }

[features]
default = ["std"]
native = ["std"]
fuzzing = ["proptest", "proptest-derive", "sha2", "std"]
std = [
    "anyhow/default",
    "borsh/default",
    "borsh/bytes",
    "bytes",
    "digest/default",
    "hex/default",
    "proptest?/default",
    "serde/default",
    "sha2?/default",
    "thiserror"
]
